# RafCoder

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE56  →  CORE56-LL.md  README.md  SECURITY.md  core.c  rafaelos.asm  rrr.rrr  semantic_pipeline_56x_v3.sh
.github/: pull_request_template.md
.github/workflows/: android-native-ci.yml  benchmark-top56.yml  core-benchmarks.yml  core-ci.yml
android/: gradlew  gradlew.bat
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
core/: Makefile  benchmark_run_sector.c  sector.c  sector.h  test_primitives_equivalence.c  test_sector_reentrancy.c  test_sector_snapshot.c  test_verb_seed.c  verb_seed.c  verb_seed.h
core/arch/: primitives.c  primitives.h
core/arch/aarch64/: primitives.S
core/arch/armv7/: primitives.S
core/arch/x86_64/: README_toroidal_42.md  primitives.S  toroidal_42.asm
docs/: android_native_build_release.md  android_native_core_bridge.md  architecture.md  benchmark_top56_runtime_artifacts.md  cron_fidelity_groups.md  rafaelos_bug_and_pending_map.md  rafaelos_operational_manual.md  rafaelos_release_notes.md  repository_hygiene.md
docs/governance/: child_protection_and_global_inclusion_standard.md  human_dignity_and_epistemic_integrity.md  license_and_safety_matrix.md  research_only_and_noncommercial_policy.md
docs/integration/: VECTRAS_RMR_BRIDGE_PLAN.md
scripts/: android_build_matrix.sh  benchmark_sector_top56.py  bootstrap_gradle_wrapper.sh  collect_core_metrics.sh  ensure_gradle_wrapper_jar.sh  install_root_zip.sh
tools/: cron_fidelity_grouping.py
